<resources>
    <string name="app_name">Hackathon_LakeMcMurtry</string>
    <string name="title_home">Home</string>
    <string name="title_map">Park Map</string>
    <string name="title_RSVPParking">RSVP</string>
    <string name="title_support">Shop</string>
    <string name="title_about">About</string>

    <!-- Map Strings -->
    <string-array name="map_spinner">
        <item>West Side Recreational Area</item>
        <item>East Side Recreational Area</item>
        <item>West Trail Maps</item>
        <item>East Trail Maps</item>
        <item>Disc Golf Course Maps</item>
        <item>Lake Map</item>
        <item>Fish Attractor Map</item>
    </string-array>
    <string name="erv1">
        East RV #1
        "\n" -Includes 30 &amp; 50 amp concrete pad, electric hookup, water, a picnic table, and a fire ring with a tilt-back grill. Dump stations are located within the park.
        "\n" "\n" -Free Wi-Fi located within the RV Loop, at the Bait Shop, Pavilion, and Gatehouse.
        "\n""\n" -Check In: 3:00 pm
        "\n" -Check Out: 1:00 pm
        "\n""\n" -Handicap Accessible</string>
    <string name="erv2">
        East RV #2
        "\n" -Includes 30 &amp; 50 amp concrete pad, electric hookup, water, a picnic table, and a fire ring with a tilt-back grill. Dump stations are located within the park.
        "\n" "\n" -Free Wi-Fi located within the RV Loop, at the Bait Shop, Pavilion, and Gatehouse.
        "\n""\n" -Check In: 3:00 pm
        "\n" -Check Out: 1:00 pm
        </string>
    <string name="erv3">
        East RV #3
        "\n" -Includes 30 &amp; 50 amp concrete pad, electric hookup, water, a picnic table, and a fire ring with a tilt-back grill. Dump stations are located within the park.
        "\n" "\n" -Free Wi-Fi located within the RV Loop, at the Bait Shop, Pavilion, and Gatehouse.
        "\n""\n" -Check In: 3:00 pm
        "\n" -Check Out: 1:00 pm
        </string>
    <string name="erv4">
        East RV #4
        "\n" -Includes 30 &amp; 50 amp concrete pad, electric hookup, water, a picnic table, and a fire ring with a tilt-back grill. Dump stations are located within the park.
        "\n" "\n" -Free Wi-Fi located within the RV Loop, at the Bait Shop, Pavilion, and Gatehouse.
        "\n""\n" -Check In: 3:00 pm
        "\n" -Check Out: 1:00 pm
        </string>
    <string name="erv5">
        East RV #5
        "\n" -Includes 30 &amp; 50 amp concrete pad, electric hookup, water, a picnic table, and a fire ring with a tilt-back grill. Dump stations are located within the park.
        "\n" "\n" -Free Wi-Fi located within the RV Loop, at the Bait Shop, Pavilion, and Gatehouse.
        "\n""\n" -Check In: 3:00 pm
        "\n" -Check Out: 1:00 pm
        </string>
    <string name="erv6">
        East RV #6
        "\n" -Includes 30 &amp; 50 amp concrete pad, electric hookup, water, a picnic table, and a fire ring with a tilt-back grill. Dump stations are located within the park.
        "\n" "\n" -Free Wi-Fi located within the RV Loop, at the Bait Shop, Pavilion, and Gatehouse.
        "\n""\n" -Check In: 3:00 pm
        "\n" -Check Out: 1:00 pm
        </string>
    <string name="erv7">
        East RV #7
        "\n" -Includes 30 &amp; 50 amp concrete pad, electric hookup, water, a picnic table, and a fire ring with a tilt-back grill. Dump stations are located within the park.
        "\n" "\n" -Free Wi-Fi located within the RV Loop, at the Bait Shop, Pavilion, and Gatehouse.
        "\n""\n" -Check In: 3:00 pm
        "\n" -Check Out: 1:00 pm
        </string>
    <string name="erv8">
        East RV #8
        "\n" -Includes 30 &amp; 50 amp concrete pad, electric hookup, water, a picnic table, and a fire ring with a tilt-back grill. Dump stations are located within the park.
        "\n" "\n" -Free Wi-Fi located within the RV Loop, at the Bait Shop, Pavilion, and Gatehouse.
        "\n""\n" -Check In: 3:00 pm
        "\n" -Check Out: 1:00 pm
        </string>
    <string name="erv9">
        East RV #9
        "\n" -Includes 30 &amp; 50 amp concrete pad, electric hookup, water, a picnic table, and a fire ring with a tilt-back grill. Dump stations are located within the park.
        "\n" "\n" -Free Wi-Fi located within the RV Loop, at the Bait Shop, Pavilion, and Gatehouse.
        "\n""\n" -Check In: 3:00 pm
        "\n" -Check Out: 1:00 pm
        </string>
    <string name="rsvpbut">RSVP</string>
    <string name="erv10">
        East RV #10
        "\n" -Includes 30 &amp; 50 amp concrete pad, electric hookup, water, a picnic table, and a fire ring with a tilt-back grill. Dump stations are located within the park.
        "\n" "\n" -Free Wi-Fi located within the RV Loop, at the Bait Shop, Pavilion, and Gatehouse.
        "\n""\n" -Check In: 3:00 pm
        "\n" -Check Out: 1:00 pm
        </string>
    <string name="rspp">RSVP</string>

<string name="donate">Donate</string>
    <string name="Products">Products</string>
    <string name="Egift">E-Gift</string>
    <string name="campsitebutton">Select Campsite</string>
    <string name="erv">East RV Campsites</string>
    <string name="wrv">West RV Campsites</string>
    <string name="etent">East Tent Campsites</string>
    <string name="wtent">West Tent Campsites</string>
    <string name="daypass"> Purchase Day Pass</string>
    <string name="annual"> Purchase an Annual Pass</string>
    <string name="selectcampsite">Select a Campsite</string>
    <string-array name="RSVP">
        <item>East RV Campsites</item>
        <item>West RV Campsites</item>
        <item>East Tent Campsites</item>
        <item>West Tent Campsites</item>
    </string-array>

    <!-- Home Strings -->
    <string name="text_textlakeMission">The mission of Lake McMurtry Friends is to enrich the quality of life by providing opportunities to engage in sustainable outdoor recreation, environmental education, and nature conservation.</string>
    <string name="text_Location">29180 Chisholm Curve Stillwater, OK 74075</string>
    <string name="text_textContactLabel">Contact Information</string>
    <string name="text_phoneMain">405-747-8085</string>
    <string name="text_emailMain">Info@lakemcmurtry.org</string>
    <string name="text_textAfterHoursContact">After Hours Contact</string>
    <string name="text_textEastCampHost">East Camp Host</string>
    <string name="text_phoneEastCampHost">405-747-4688</string>
    <string name="text_emailEastCampHost">ranger@lakemcmurtry.org</string>
    <string name="text_textWestCampHost">West Camp Host</string>
    <string name="text_phoneWestCampHost">405-858-0203</string>
    <string name="text_emailWestCampHost">camphost@lakemcmurtry.org</string>
    <string name="text_textStillwaterPolice">Stillwater Police Department</string>
    <string name="text_phoneStillwaterPolice">405-372-4171 </string>
    <string name="text_Amenities">Amenities</string>
    <string name="text_AdventureCamp">Adventure Camp</string>
    <string name="text_camping">Camping</string>
    <string name="text_diskGold">Disk Golf</string>
    <string name="text_fishing">Fishing</string>
    <string name="text_hikingBiking">Hiking and Mountain Biking</string>
    <string name="text_kayaking">Kayaking</string>
    <string name="text_pavilition">Pavilion Rentals</string>
    <string name="text_amenity">Amenities</string>
    <string name="text_rulesRegs">Rules and Regulations</string>
    <string name="text_mainContact">Main Contact</string>


    //About Us Strings
    <string name="button_info">Park Info</string>
    <string name="button_rules">Rules</string>
    <string name="button_wildlife">Wildlife</string>
    <string name="button_history">History</string>
    <string name="button_edu">Educational</string>
    <string name="button_partners">Partners</string>
    <string name="button_contact">Contact</string>
    //general info
    <string name="header_mission">Our Mission</string>
    <string name="header_purpose">Our Purpose</string>
    <string name="text_mission">The mission of Lake McMurtry Friends is to enrich quality of life by providing opportunities to engage in sustainable outdoor recreation, environmental education and nature conservation.</string>
    <string name="text_purpose">Lake McMurtry Friends, Inc. was formed to manage and protect the lake, but more than that we are organized to promote outdoor recreation and leisure, scientific and educational study, and community involvement. We are a small group of individuals who want to see Lake McMurtry succeed and continue to be available to the general public for generations to come. After all this park belongs to the people of our community and we wish to represent that each and every day!
</string>
    <string name="text_disclaimer">Lake McMurtry Friends, Inc. is a private 501 (c)3  non-profit organization.</string>
    //Rules
    <string name="text_rules">- Permits are required for all vehicles and activities within the park.
        "\n"- Check In 3pm , Check out 1pm
        "\n"- All sites are reserveable online 24/7 therefore you must check in with park staff to camp.
        "\n"- Alcoholic beverages are prohibited on all Lake McMurtry property.
        "\n"- Daily permits expire at 10:00 pm.
        "\n"- Quiet hours are from 10:00 pm to 7:00 am. Generators are generally not permitted, please check with park staff for more information.
        "\n"- The discharging of firearms, BB guns, paintball guns, bow and arrows, sling shots or any devices that use burning powder, explosives, compressed gases, etc. is prohibited.
        "\n"- Pets must be kept on leashes no longer than 10 feet and under control at all times.
        "\n"- Fireworks and bonfires are prohibited.
        "\n"- Confetti is prohibited.
        "\n"- Removal of plants, animals, rocks, downed timber, artifacts or relics is prohibited without written permission from Lake McMurtry Friends, Inc. and/or the City of Stillwater.
        "\n"- The use of ATVs, LSVs, UTVs, and golf carts is prohibited on Lake McMurtry property.</string>
    //wildlife
    <string name="button_deer">Deer Diversity</string>
    <string name="button_bird">Bird Diversity</string>
    <string name="button_invasive">Invasive Species</string>
    //birds aren't even fucking real
    <string name="header_bird">Bird Diversity at Lake McMurtry
</string>
    <string name="bird_words">Bird watchers and wildlife enthusiasts!  Lake McMurtry is a great place to spend the day searching for all your favorite bird species.  Who knows, you may just find a bird you have never seen.  With temperatures climbing and daylight hours ever so slowly starting to increase, migratory bird species are beginning to show.   Due the variety of habitats at Lake McMurtry, there are a multitude of birds that can be found; each habitat type will support different bird species.  Habitats at the lake encompass: grasslands, wetlands, open water, mature forest, and early successional habitats.  With our 30+ miles of multiuse trails it allows you to explore all the different habitat types and capture a rich bird diversity.  Be sure to share all of your Lake McMurtry bird photos by emailing them to info@lakemcmurtry.org or post them to our Facebook at Lake McMurtry Friends!</string>
</resources>